# holoviz-tools

./: .pre-commit-config.yaml  README.md  _holoviz  action_status.py  changelog.py  holoviz  holoviz.plugin.zsh  holoviz.sh  holoviz.zsh  pyproject.toml  ruff.toml  save.py
.config/: ruff.toml
.github/workflows/: test.yaml
completion/: holoviz-completion.bash  holoviz-completion.zsh
scripts/: _artifact.py  action_status.py  action_update.py  artifact.py  build.py  bump.py  changelog.py  changelog_v2.py  cleanup.py  cli.py  cmp.sh  deprecate.py  fetch.sh  lab.sh  missing_imports_notebook.py  pre-push  python-313.py  rich_menu.py  save.py  serve.sh  setup.sh  utilities.py  version-bisect.py  version_bisect.py  version_finder.py
scripts/_vendor/: simple_term_menu.py
scripts/bokeh/: chrome.py  setup.sh
scripts/notebooks/: missing_new_python.ipynb
scripts/pixi/: artifact.py  lock.py  pixi-build.py  pixi-compare.py
scripts/workspace/: bokehjs.sh  panel-model.sh
tools/: cleanup.py  missing_imports_notebook.py  setup.sh
